--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  google_maps_flutter: ^2.1.2
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
