--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  persistent_bottom_nav_bar: any
   google_maps_flutter: ^2.1.2
   flutter:
     sdk: flutter
