--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   persistent_bottom_nav_bar: any
   google_maps_flutter: ^2.1.2
+  intl: ^0.17.0
+
   flutter:
     sdk: flutter
 
